2014/12/29:
Incompatible change of the incremental API.
The API now exposes reduction events.
The type 'a result is now private.
The type env is no longer parameterized.
[handle] is renamed to [resume].
[offer] and [resume] now expect a result, not an environment.

2014/12/22:
Documented the Coq back-end (designed and implemented by Jacques-Henri Jourdan).

2014/12/15:
New incremental API (in --table mode only), inspired by Frédéric Bour.

2014/12/11:
Menhir now reports an error if one of the start symbols produces
either the empty language or the singleton language {epsilon}.

Although some people out there actually define a start symbol that recognizes
{epsilon} (and use it as a way of initializing or re-initializing some global
state), this is considered bad style. Furthermore, by ruling out this case, we
are able to simplify the table back-end a little bit.

2014/12/12:
A speed improvement in the code back-end.

2014/12/08:
Menhir now requires OCaml 4.02 (instead of 3.09).

2014/12/02:
Removed support for the $previouserror keyword.
Removed support for --error-recovery mode.

2014/02/18:
In the Coq backend, use ' instead of _ as separator in identifiers.
Also, correct a serious bug that was inadvertently introduced on
2013/03/01 (r319).

2014/02/14
Lexer fix so as to support an open variant type [> ...] within
a %type<...> declaration.

2013/12/16
Updated the Makefile so that install no longer depends on all.
Updated the demos so that the lexer does not invoke "exit 0"
when encoutering eof. (This should be more intuitive.)

2013/09/11:
Fixed a newline conversion problem that would prevent Menhir from
building on Windows when using ocaml 4.01.

2013/03/02:
Switched to ocamlbuild. Many thanks to Daniel Weil for offering
very useful guidance.

2013/01/16:
"menhir --depend" was broken since someone added new whitespace in the output
of ocamldep. Fixed.

2012/12/19:
Fixed a compilation problem that would arise when a file produced