@@ -1,11 +1,3 @@
-* Introduce a submodule Incremental for the incremental entry
-  points. Move also the types terminal, nonterminal, symbol
-  to a sub-module, to avoid any name clashes.
-
-* Clean up Interface and tableBackend. Decide whether we need
-  a new switch (--inspect) for the inspection API. Condition
-  [terminal], [nonterminal], etc. to this new switch.
-
 * IncrementalEngine: document [lr1state], [element], [view].
 
 * Define MenhirLib.Stream?
