@@ -1,3 +1,7 @@
+2015/01/01:
+Incompatible change of the incremental API.
+The entry point main_incremental is now named Incremental.main.
+
 2014/12/29:
 Incompatible change of the incremental API.
 The API now exposes reduction events.
